bpo-40192: Use thread_cputime for time.thread_time to improve resolution